--- a/style.css
+++ b/style.css
@@ -2,10 +2,18 @@ body {
     background-color: #333;
 }
 
+.container {
+    max-width: 1400px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 100%;
+}
+
 h1 {
     font-size: 2.5rem;
     font-weight: bold;
-    padding: 25px 0 20px 30px;
+    padding: 25px 0 20px;
     color: #eee;
     text-decoration: underline;
 }
@@ -38,4 +46,35 @@ h1 {
 .card h6 {
     font-size: 1rem;
     display: inline;
+}
+
+
+.top-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 100px;
+}
+
+.top-container .btn {
+    font-family: 'Courier New', Courier, monospace;
+    padding: 8px 17px;
+    cursor: pointer;
+    background-color: #333;
+    border: 1px solid #555;
+    color: #eee;
+    border-radius: 5px;
+    font-size: 0.95rem;
+}
+
+.top-container .btn:hover {
+    box-shadow: 0px 0px 3px #aaa;
+}
+
+.top-container .btn:active {
+    transform: scale(0.96);
+}
+
+.top-container .btn:focus {
+    outline: none;
 }
