--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #333;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .container {
@@ -21,14 +22,15 @@ h1 {
 .card-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 30px;
     padding: 20px;
+    justify-content: center;
 }
 
 .card {
     background-color: #eee;
     box-shadow: 1px 1px 5px #aaa;
-    width: 200px;
+    width: 230px;
     height: 200px;
     padding: 0 25px;
     border-radius: 15px;
