--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1 {
     background-color: #eee;
     box-shadow: 1px 1px 5px #aaa;
     width: 230px;
-    height: 200px;
+    height: 250px;
     padding: 0 25px;
     border-radius: 15px;
     display: flex;
@@ -180,4 +180,21 @@ h1 {
     width: 20px;
     height: 20px;
     cursor: pointer;
+}
+
+.remove-btn {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.remove-btn:hover {
+    background-color: #444;
+}
+
+.remove-btn:active {
+    transform: scale(0.98);
 }
